Fixed broken tests.
Turned out the IdentifierCapitalisationRule was still defined in the
XML, despite not being defined in a Java file. Removing this fixed.